# GBKviz

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  packages.txt  pyproject.toml
.github/workflows/: ci.yml  deploy_to_pypi.yml  publish_docker_image.yml  publish_to_pypi_and_dockerhub.yml
src/gbkviz/: align_coord.py  draw_genbank_fig.py  draw_param.py  gbkviz_webapp.py  genbank.py  genbank_diagram.py  genome_align.py  genome_diagram.py  load_files.py  st_gbkviz.py  toppage.md  util.py
src/gbkviz/genbank/: MH816966.1.gbk  MK373776.1.gbk  MK373777.1.gbk  MN176217.gbk
src/gbkviz/scripts/: download_gbk_from_acc.py  launch_gbkviz_webapp.py  launch_st_gbkviz.py
tests/: conftest.py  test_align_coord.py  test_draw_genbank_fig.py  test_gbkviz_webapp.py  test_genbank.py  test_genome_align.py
tests/testdata/genbank/: JX128258.1.gbk  MH051335.1.gbk
tests/testdata/genome_fasta/: JX128258.1_1-66854.fa  MH051335.1_1-72179.fa  MH816966.1_1-68472.fa  MK373776.1_1-71283.fa
