[tool.poetry]
name = "GBKviz"
version = "1.1.4"
description = "Simple web application to visualize and compare genomes in Genbank files"
authors = ["moshi"]
license = "MIT"
homepage = "https://github.com/moshi4/GBKviz/"
repository = "https://github.com/moshi4/GBKviz/"
readme = "README.md"
keywords = [
    "gbkviz",
    "bioinformatics",
    "streamlit",
    "genomics",
    "visualization",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
include = ["tests"]

[tool.poetry-dynamic-versioning]
enable = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src --tb=line --cov-report=xml --cov-report=term"
testpaths = ["tests"]

[tool.poetry.dependencies]
python = "^3.7"
biopython = "^1.79"
reportlab = "3.5.68"
streamlit = "^1.5.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"
pydocstyle = "^6.1.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
gbkviz_webapp = "gbkviz.scripts.launch_gbkviz_webapp:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
